# logghostbuster

./: .gitignore  DETAILED_CATEGORIES.md  LICENSE  README.md  compare_classification_methods.py  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
deeplogbot/: config.yaml
deeplogbot/features/providers/: README.md
deeplogbot/reports/: reporting.py
deeplogbot/utils/: __init__.py  geography.py
examples/: detailed_categories_example.py
logghostbuster/: __init__.py  config.py  config.yaml  main.py
logghostbuster/features/: __init__.py  base.py  extraction.py  registry.py  schema.py
logghostbuster/features/providers/: README.md  __init__.py  ebi.py  ebi_extraction.py  ebi_extractors.py
logghostbuster/features/providers/ebi/: __init__.py  behavioral.py  discriminative.py  ebi.py  schema.py  timeseries.py
logghostbuster/isoforest/: __init__.py  classification.py  models.py
logghostbuster/llm/: utils.py
logghostbuster/models/: __init__.py
logghostbuster/models/classification/: __init__.py  deep_architecture.py  feature_validation.py  ml_supervised.py  pattern_discovery.py  rules.py
logghostbuster/models/isoforest/: __init__.py  models.py
logghostbuster/providers/: __init__.py  base_taxonomy.yaml
logghostbuster/providers/ebi/: config.yaml
logghostbuster/reports/: __init__.py  annotation.py  html_report.py  reporting.py  statistics.py  visualizations.py
logghostbuster/utils/: geography.py
logghostbuster/visualization/: README.md  __init__.py  deep_results.py
paper/: main.tex  references.bib  supplementary.tex
scripts/: aggregate_locations.py  benchmark_algorithms.py  benchmark_methods.py  benchmark_rules_vs_deep.py  benchmark_three_methods.py  classify_full_dataset.py  classify_full_dataset_v2.py  compare_classification_methods.py  compare_methods.py  compute_benchmark_metrics.py  create_ground_truth.py  generate_figures.py  generate_pride_overview.py  generate_supp_figures.py  install_local_llm.sh  pridepy_downloads.py  run_full_analysis.py  statistical_comparison.py  test_exploratory_clustering.py  test_heuristic_fixes.py  test_improved_clustering.py  test_pure_unsupervised.py
tests/: test_package.py  test_unsupervised_fallback.py
