[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplogbot"
version = "0.1.0"
description = "Bot detection and traffic classification for scientific data repository logs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DeepLogBot Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "duckdb>=0.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
llm = [
    "requests>=2.25.0",
    "transformers>=4.20.0",
    "torch>=2.1.0",
]

[project.scripts]
deeplogbot = "logghostbuster.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logghostbuster*"]

