[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeplogbot"
version = "0.1.0"
description = "Bot detection and traffic classification for scientific data repository logs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yasset Perez-Riverol", email = "yperez@ebi.ac.uk"}
]
keywords = ["bot-detection", "proteomics", "PRIDE", "download-analysis", "anomaly-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "duckdb>=0.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ypriverol/deeplogbot"
Repository = "https://github.com/ypriverol/deeplogbot"
Issues = "https://github.com/ypriverol/deeplogbot/issues"

[project.scripts]
deeplogbot = "deeplogbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["deeplogbot"]

[tool.hatch.build.targets.sdist]
include = ["deeplogbot/"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

